--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ca907e">  <td>20/12/09 23:16:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_NewCustomerTest_003.createNewCustomer()[pri:0, instance:com.inetBanking.testCases.TC_NewCustomerTest_003@3b088d51]">createNewCustomer</td> 
+<tr bgcolor="ca907e">  <td>20/12/20 23:31:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_EditCustomerTest_004.editCustomer()[pri:0, instance:com.inetBanking.testCases.TC_EditCustomerTest_004@3b088d51]">editCustomer</td> 
   <td>main@1627428162</td>   <td></td> </tr>
-<tr bgcolor="67c67e">  <td>20/12/09 23:17:21</td>   <td>50465</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:com.inetBanking.testCases.TC_NewCustomerTest_003@3b088d51]">&lt;&lt;quitBrowser</td> 
+<tr bgcolor="67c67e">  <td>20/12/20 23:31:47</td>   <td>14628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:com.inetBanking.testCases.TC_EditCustomerTest_004@3b088d51]">&lt;&lt;quitBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627428162</td>   <td></td> </tr>
-<tr bgcolor="67c67e">  <td>20/12/09 23:16:22</td>   <td>-8540</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetBanking.testCases.TC_NewCustomerTest_003@3b088d51]">&gt;&gt;setup</td> 
+<tr bgcolor="67c67e">  <td>20/12/20 23:31:24</td>   <td>-8589</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetBanking.testCases.TC_EditCustomerTest_004@3b088d51]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627428162</td>   <td></td> </tr>
 </table>
